# pico-sbus

./: .gitignore  CMakeLists.txt  README.md  TODO.md  debug-swd.sh  input-mapping.c  input-mapping.h  install-swd.sh  openocd-remote.cfg  pico-sbus.c  sbus-hid.c  sbus-hid.h  sbus.c  sbus.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
.github/: FUNDING.yml
custom-device/: rc-joy-hid.h
docs/: pio-todo.txt  sbus-pio-state-diagram.puml
sbus/: sbus.c  sbus.h  uart_8e2_rx.pio  uart_rx.pio
